apps/mailhog/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mailhog
spec:
  selector:
    matchLabels:
      app: mailhog
  serviceName: mailhog
  replicas: 1
  minReadySeconds: 10  # by default is 0
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mailhog
          image: docker.io/mailhog/mailhog:latest
          ports:
            - containerPort: 8025
              name: web
            - containerPort: 1025
              name: smtp
