apps/mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  selector:
    app: mailhog
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
apiVersion: v1
kind: Service
metadata:
  name: mailhog-smtp
  namespace: mailhog
  annotations:
    external-dns.alpha.kubernetes.io/hostname: smtp.mailhog.chaosdorf.space.
spec:
  type: LoadBalancer
  selector:
    app: mailhog
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: smtp
